--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -9,9 +9,12 @@
     <li data-target="#carousel-example" data-slide-to="2"></li>
   </ol>
 
+
+
   <div class="carousel-inner">
     <div class="item active">
-      <a href="#"><img src="images/silde-1.png" /></a>
+  
+      <%= link_to image_tag("silde-1.png"), '#' %>
       <div class="carousel-caption  caption-wrper">
         
         <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
@@ -19,31 +22,13 @@
        <a class="btn-shop" href="#">Shop Now</a>
       </div>
     </div>
-    <div class="item">
-      <a href="#"><img src="images/silde-1.png" /></a>
-      <div class="carousel-caption caption-wrper">
-        
-        <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
-        <a class="btn-shop" href="#">Shop Now</a>
-      </div>
-    </div>
-    <div class="item">
-      <a href="#"><img src="images/silde-1.png" /></a>
-      <div class="carousel-caption caption-wrper">
-        
-        <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
-        
-        <a class="btn-shop" href="#">Shop Now</a>
-      </div>
-    </div>
+</div>
+      
+    
+  
   </div>
 
- <!-- <a class="left carousel-control" href="#carousel-example" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>-->
+  
 </div>
 <div class="container">
 <div class="row">
@@ -57,7 +42,7 @@
 </div>
  </section>
 
-<section >
+<section>
   <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -103,6 +88,7 @@
     </div>
   </div>
 </section>
+
 <section>
   <div class="container">
     <div class="row">
@@ -173,36 +159,39 @@
           <div class="bx-wrapper" style="max-width: 1540px;">
             <div class="bx-viewport" style="width: 100%; overflow: hidden; position: relative; height: 86px;">
               <ul class="slider2 logo-slide" style="width: 1115%; position: relative; transition-duration: 0.5s; transform: translate3d(-2380px, 0px, 0px);">
+                <li class="bx-clone">               
+                <%= image_tag "video-img1.png" %>
+              </li>
                 <li class="bx-clone">
-                <img alt="logo1" src="images/video-img1.png"></li>
+               <%= image_tag "video-img2.png" %>
+             </li>
                 <li class="bx-clone">
-                <img alt="logo1" src="images/video-img2.png"></li>
-                <li class="bx-clone">
-                <img alt="logo1" src="images/video-img3.png"></li>
-                <li class="bx-clone">
-                <img alt="logo1" src="images/video-img4.png"></li>
+               <%= image_tag "video-img3.png" %>
+                </li>
+
+               <li class="bx-clone">
+                <%= image_tag "video-img4.png" %>
+                 </li>
                 <li  class="bx-clone">
-                <img alt="logo1" src="images/video-img5.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img1.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img2.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img3.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img4.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img5.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img1.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img2.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img3.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img4.png"></li>
-                <li >
-                <img alt="logo1" src="images/video-img5.png"></li>
+                <%= image_tag "video-img5.png" %>
+                 </li>
+                  <li class="bx-clone">               
+                <%= image_tag "video-img1.png" %>
+              </li>
+                <li class="bx-clone">
+               <%= image_tag "video-img2.png" %>
+             </li>
+                <li class="bx-clone">
+               <%= image_tag "video-img3.png" %>
+                </li>
+
+               <li class="bx-clone">
+                <%= image_tag "video-img4.png" %>
+                 </li>
+                <li  class="bx-clone">
+                <%= image_tag "video-img5.png" %>
+                 </li>
+                
                 
                
               </ul>
@@ -219,7 +208,7 @@
                 <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="7" href="">8</a></div>
                 <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="8" href="">9</a></div>
               </div>
-              <div class="bx-controls-direction"><a href="" class="bx-prev">Prev</a><a href="" class="bx-next">Next</a></div>
+              <div class="bx-controls-direction"><a href="javascript::voide(0);" class="bx-prev">Prev</a><a href="javascript::voide(0);" class="bx-next">Next</a></div>
             </div>
           </div>
         </div>
@@ -235,17 +224,8 @@
 </section>
 
 
-<!-- page-wrapper end --> 
 
-<!-- JavaScript files placed at the end of the document so the pages load faster
-    ================================================== --> 
-<!-- Jquery and Bootstap core js files --> 
-<script type="text/javascript" src="js/jquery.min.js"></script> 
-<script type="text/javascript" src="js/bootstrap.min.js"></script> 
-<!-- Font Awesome CSS -->
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<script src="js/modernizr.js"></script> 
-<script src="js/bxslider.min.js"></script> 
+ 
 
 <script>
 $(document).ready(function(){
