--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,3 +1,5 @@
+ <div class="container">
+
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
     <% @body_id = 'product-details' %>
 
@@ -189,5 +191,6 @@ Energy<br />
 3D<br />
 3D+<br />
 </p>
+</div>
 </div>
 </div>
