--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -1,6 +1,6 @@
 <script>
-window.location.href = "/products/pbprometer1";
-$('body').css('display','none');
+//window.location.href = "/products/pbprometer1";
+//$('body').css('display','none');
 </script>
 <% if params[:keywords] %>
 
