--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -22,6 +22,26 @@
        <a class="btn-shop" href="#">Shop Now</a>
       </div>
     </div>
+<div class="item">
+  
+      <%= link_to image_tag("silde-1.png"), '#' %>
+      <div class="carousel-caption  caption-wrper">
+        
+        <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
+       
+       <a class="btn-shop" href="#">Shop Now</a>
+      </div>
+    </div>
+<div class="item">
+  
+      <%= link_to image_tag("silde-1.png"), '#' %>
+      <div class="carousel-caption  caption-wrper">
+        
+        <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
+       
+       <a class="btn-shop" href="#">Shop Now</a>
+      </div>
+    </div>
 </div>
       
     
@@ -42,12 +62,12 @@
 </div>
  </section>
 
-<section>
+<section class="slider_home1">
   <div class="container">
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row1">
+    <div class="slider_container">
       <h1 class="text-center title-Sellers">Best Sellers</h1>
-      <div class="col-xs-12">
+      <div class="slider_contain">
         <div class="col-sm-4 col-md-4">
           <div id="effect-1" class="effects clearfix">
             <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), spree.account_path %>
@@ -81,14 +101,14 @@
          
         
        <div class="clearfix"></div>
-      <div class="top-to-bottom"></div>
+     
         
       </div>
       
     </div>
   </div>
+</div>
 </section>
-
 <section>
   <div class="container">
     <div class="row">
@@ -144,11 +164,14 @@
             <span>$499.00</span> </div>
         </div>
          <div class="clearfix"></div>
-      <div class="top-to-bottom"></div>
+      
       </div>
     </div>
   </div>
+</div>
 </section>
+
+
 <section class="our-team-v-2 ">
   <div class="container ">
     <div class="row ">
@@ -222,7 +245,7 @@
    </div>
    
 </section>
-
+<div class="clear"></div>
 
 
  
