--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -4,8 +4,16 @@
 <!--[if IE 8 ]>    <html class="ie ie8" lang="<%= I18n.locale %>"> <![endif]-->
 <!--[if IE 9 ]>    <html class="ie ie9" lang="<%= I18n.locale %>"> <![endif]-->
 <!--[if gt IE 9]><!--><html lang="<%= I18n.locale %>"><!--<![endif]-->
+
+
   <head data-hook="inside_head">
     <%= render :partial => 'spree/shared/head' %>
+    <%
+if request.path == '/' 
+@body_id = "full_width"
+end
+%>
+  
   </head>
   <body class="<%= body_class %>" id="<%= @body_id || 'default' %>" data-hook="body">
 	<div class="head-content">
@@ -18,7 +26,7 @@
 
         <%= render :partial => 'spree/shared/sidebar' if content_for? :sidebar %>
 
-        <div id="content" class="columns <%= !content_for?(:sidebar) ? "sixteen" : "twelve omega" %>" data-hook>
+        <div id="content" class=" columns <%= !content_for?(:sidebar) ? "sixteen" : "twelve omega" %> container content-rm" data-hook>
           <%= flash_messages %>
           <%= yield %>
         </div>
