--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -1,5 +1,6 @@
 <% @body_id = 'cart' %>
-<div data-hook="cart_container">
+
+<div data-hook="cart_container " class="">
   <h1><%= Spree.t(:shopping_cart) %></h1>
 
   <% if @order.line_items.empty? %>
