--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,17 +1,26 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.5/jquery.bxslider.css" rel="stylesheet">
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.5/jquery.bxslider.js" ></script>
+<%
+if request.path == '/' 
+@body_id = "full_width"
+end
+%>
 	
 	
 <script>
 $( document ).ready(function() {
+  $('body#full_width .content-rm').removeClass('container');
 $('#mobile-menu-open').click(function() {
   $( ".togle_menu_mobile" ).toggle('slide');
+
 });
 });
 </script>
-<header id="header" class="row" data-hook>
-<div class="header-top">
-  <div class="container1">
+<div id="header1" class="row" data-hook>
+<div class="header-top header_bg_top">
+  <div class="container">
     <div class="row">
       <div class="col-md-5 col-sm-5"> 
         <!-- logo -->
@@ -31,11 +40,123 @@ $('#mobile-menu-open').click(function() {
       </div>
     </div>
   </div>
+
+
+  <div class="desc_menu">
+    <div class="container">
+      <div class="menu_nev">
+        <ul class="menu_ul">
+          <li><a href="#">Shop Now</a></li>
+          <li class="power_beat"><a href="#">About Powerbeat<i class="fa fa-angle-down"></i></a>
+            <div class="bet_sub_menu">
+            <div class="mega_abt" style="background:#ccc"> 
+                <div class="container">
+                  <div class="store_left">
+                    <div class="go_to_store">
+                    <%= image_tag("item-3.png", :alt => "slider1_img") %>
+                    <span>visit store</span>
+                  </div>
+                  </div>
+                  <div class="abt_right">
+                    <div class="sub_abt">
+                      <span>benefits  </span>
+                      <%= image_tag("menu1.jpg", :alt => "slider1_img") %>
+                    </div>
+                    <div class="sub_abt">
+                      <span>technology</span>
+
+                      <%= image_tag("menu2.jpg", :alt => "slider1_img") %>
+                    </div>
+                    <div class="sub_abt">
+                      <span>gallery</span>
+                      <%= image_tag("menu3.jpg", :alt => "slider1_img") %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+          </li>
+          <li class="company_sub"><a href="#">Company<i class="fa fa-angle-down"></i></a>
+            <div class="company_sub_menu">
+                <div class="mega_company" style="background:#ccc"> 
+                    <div class="container">
+                      <ul>
+                        <li><a href="#">ABOUT US </a> </li>
+                        <li><a href="#">PARTNERS </a> </li>
+                        <li><a href="#">press </a> </li>
+                      </ul>
+                    </div>
+                </div>
+            </div>
+
+
+          </li>
+          <li class="support_sub"><a href="#">Support<i class="fa fa-angle-down"></i></a>
+              <div class="support_sub_menu">
+                <div class="mega_support" style="background:#ccc"> 
+                    <div class="container">
+                      <ul>
+                        <li><a href="#">faq </a> </li>
+                        <li><a href="#">vedio gallery</a> </li>
+                        
+                      </ul>
+                    </div>
+                </div>
+            </div>
+
+
+          </li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="mobile_menu">
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>            
+          </div>
+          <div class="navbar-collapse collapse" id="navbar">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+              <li class="dropdown">
+                <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider" role="separator"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+              <li><a href="../navbar-static-top/">Static top</a></li>
+              <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
   
+
+  </div>
   
-  
- <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
+  <!-- <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -59,9 +180,34 @@ $('#mobile-menu-open').click(function() {
       </ul>
     </div>
   </div>
-</nav>
-  
+</nav> -->
+
+              <!-- <div class="mega_abt" style="background:#ccc"> 
+                <div class="container">
+                  <div class="store_left">
+                    <div class="go_to_store">
+                    <%= image_tag("item-3.png", :alt => "slider1_img") %>
+                    <span>visit store</span>
+                  </div>
+                  </div>
+                  <div class="abt_right">
+                    <div class="sub_abt">
+                      <span>visit store</span>
+                      <%= image_tag("menu1.jpg", :alt => "slider1_img") %>
+                    </div>
+                    <div class="sub_abt">
+                      <span>visit store</span>
+
+                      <%= image_tag("menu2.jpg", :alt => "slider1_img") %>
+                    </div>
+                    <div class="sub_abt">
+                      <span>visit store</span>
+                      <%= image_tag("menu3.jpg", :alt => "slider1_img") %>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
  
   
 </div>
-</header>
+</div>
