--- a/app/assets/stylesheets/spree/fancy.scss
+++ b/app/assets/stylesheets/spree/fancy.scss
@@ -7,7 +7,7 @@
 
 @import 'compass';
 
-/*@import 'compass/css3';*/
+@import 'compass/css3';
 
 @import 'spree/fancy/variables';
 @import 'spree/fancy/variables_override';
