--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -14,7 +14,7 @@
     
   </form>
     </div>
-    <div class="col-md-6 col-sm-6">
+    <div class="col-sm-12 col-md-6">
       
         <h3 class="footer-title-2">BE SOCIAL. JOIN US</h3>
                             
@@ -28,6 +28,7 @@
         <li><a href="#"><i class="fa fa-lg fa-youtube-play"></i></a></li>
     </ul>
 </div>    
+<div class="clear"></div>
     
    
     </div>
