--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -17,6 +17,27 @@ $('#mobile-menu-open').click(function() {
 
 });
 });
+
+
+
+$(document).ready(function() {
+          $(function(){
+            $("#navside").navside({
+                      position         : 'left',   // options for Position: 'left' or 'right'. Default is 'right'
+                      scroll           : 'fixed'  // options for Scroll: 'hidden' or 'fixed'. Default is 'hidden'
+                  });
+          });
+        });
+
+        $(document).ready(function(){
+
+   $(".sub_menu").hide();
+   $(".menu-mobile").click(function(){
+  var d = $(this).attr('id'); 
+        $('#'+ d).find('.sub_menu').toggle(1000);
+    });
+    });
+        
 </script>
 <div id="header1" class="row" data-hook>
 <div class="header-top header_bg_top">
@@ -207,6 +228,47 @@ $('#mobile-menu-open').click(function() {
                   </div>
                 </div>
               </div> -->
+
+
+
+
+              <h1>demo menu</h1>
+
+              <nav id="navside">
+  <ul id="sidebar-menu">
+    <li class="active "><a href="#">Home</a></li>
+    <li class="button menu-mobile" id="second"><a href="#">Portfolio</a>
+    <ul class="sub_menu" id="hideMe">
+       <li class="child"><a href="#">sub menu 1</a></li>
+       <li class="child"><a href="#">sub menu 2</a></li>
+       <li class="child"><a href="#">sub menu 3</a></li>
+       <li class="child"><a href="#">sub menu 4</a></li>
+    </ul>
+  </li>
+  
+  <li class="button menu-mobile" id="second1"><a href="#">Service</a>
+    <ul class="sub_menu" id="hideMe1">
+       <li class="child"><a href="#">sub menu 1</a></li>
+       <li class="child"><a href="#">sub menu 2</a></li>
+       <li class="child"><a href="#">sub menu 3</a></li>
+       <li class="child"><a href="#">sub menu 4</a></li>
+    </ul>
+  </li> 
+  
+  <li class="button menu-mobile" id="second2"><a href="#">Contact</a>
+    <ul class="sub_menu" id="hideMe2">
+       <li class="child"><a href="#">sub menu 1</a></li>
+       <li class="child"><a href="#">sub menu 2</a></li>
+       <li class="child"><a href="#">sub menu 3</a></li>
+       <li class="child"><a href="#">sub menu 4</a></li>
+    </ul>
+  </li> 
+  
+    
+    
+  </ul>
+</nav>
+              <h1>demo menuend</h1>
  
   
 </div>
