--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,3 +1,7 @@
+
+<div class="top_banner_1">
+ <%= image_tag("benifits_banner.jpg", :alt => "slider1_img", :class =>"topbanner") %>
+</div> 
  <div class="container">
 
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
