--- a/app/assets/fonts/bxslider.css
+++ b/app/assets/fonts/bxslider.css
@@ -104,13 +104,16 @@
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
 .bx-wrapper .bx-prev {
-	left: 10px;
+	  left: 27px !important;
 	background: url(../../images/controls.png) no-repeat 0 -32px;
+
 }
 
 .bx-wrapper .bx-next {
 	right: 10px;
 	background: url(../../images/controls.png) no-repeat -43px -32px;
+	right: 30px;
+    top: -435px !important;
 }
 
 .bx-wrapper .bx-prev:hover {
