--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -20,12 +20,12 @@
                             
     <div class="social">
     <ul>
-        <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-lg fa-linkedin"></i></a></li>
-        <li><a href="#"><i class="fa fa-lg  fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/WatteamPowerBeat"><i class="fa fa-lg fa-facebook"></i></a></li>
+        <li><a href="https://twitter.com/WatteamOn"><i class="fa fa-lg fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/company/watteam-ltd-?trk=tyah&trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1"><i class="fa fa-lg fa-linkedin"></i></a></li>
+        <li><a href="https://www.youtube.com/user/WatteamPowerBeat/feed"><i class="fa fa-lg  fa-instagram"></i></a></li>
         
-        <li><a href="#"><i class="fa fa-lg fa-youtube-play"></i></a></li>
+        <li><a href="https://www.instagram.com/watteampowerbeat/"><i class="fa fa-lg fa-youtube-play"></i></a></li>
     </ul>
 </div>    
 <div class="clear"></div>
@@ -41,17 +41,17 @@
    <div class="container">
    <div class="footer-navi-bar">
    <ul>
-   <li><a href="#">Benefits </a>|</li>
-   <li><a href="#">Technology</a>|</li>
-   <li><a href="#">Gallery</a>|</li>
-   <li><a href="#">About</a>|</li>
-   <li><a href="#">Partners</a>|</li>
-   <li><a href="#">PRESS </a>|</li>
-   <li><a href="#">FAQ</a>|</li>
-   <li><a href="#">Contact</a></li>
+   <li><a href="http://watteam-staging.bestdevsite.com/benefits/">Benefits </a>|</li>
+   <li><a href="http://watteam-staging.bestdevsite.com/technology/">Technology</a>|</li>
+   <li><a href="http://watteam-staging.bestdevsite.com/news/gallery/">Gallery</a>|</li>
+   <li><a href="http://watteam-staging.bestdevsite.com/about/">About</a>|</li>
+   <li><a href="http://watteam-staging.bestdevsite.com/partners/">Partners</a>|</li>
+   <li><a href="http://watteam-staging.bestdevsite.com/news/press/">PRESS </a>|</li>
+   <li><a href="http://watteam-staging.bestdevsite.com/faq/">FAQ</a>|</li>
+   <li><a href="http://watteam-staging.bestdevsite.com/contact/">Contact</a></li>
    
    </ul>
-   ]<div class="clear"> </div>
+   <div class="clear"> </div>
    </div>
    <div class="clear"> </div>
 
