--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -59,16 +59,16 @@ $('#mobile-menu-open').click(function() {
                   </div>
                   <div class="abt_right">
                     <div class="sub_abt">
-                      <span>benefits  </span>
+                      <span><a href="http://watteam-staging.bestdevsite.com/benefits/"> benefits  </a></span>
                       <%= image_tag("menu1.jpg", :alt => "slider1_img") %>
                     </div>
                     <div class="sub_abt">
-                      <span>technology</span>
+                      <span><a href="http://watteam-staging.bestdevsite.com/technology/">  technology </a></span>
 
                       <%= image_tag("menu2.jpg", :alt => "slider1_img") %>
                     </div>
                     <div class="sub_abt">
-                      <span>gallery</span>
+                      <span><a href="http://watteam-staging.bestdevsite.com/news/gallery/">    gallery </a></span>
                       <%= image_tag("menu3.jpg", :alt => "slider1_img") %>
                     </div>
                   </div>
@@ -83,9 +83,9 @@ $('#mobile-menu-open').click(function() {
                 <div class="mega_company" style="background:#ccc"> 
                     <div class="container">
                       <ul>
-                        <li><a href="#">ABOUT US </a> </li>
-                        <li><a href="#">PARTNERS </a> </li>
-                        <li><a href="#">press </a> </li>
+                        <li><a href="http://watteam-staging.bestdevsite.com/about/">ABOUT US </a> </li>
+                        <li><a href="http://watteam-staging.bestdevsite.com/partners/">PARTNERS </a> </li>
+                        <li><a href="http://watteam-staging.bestdevsite.com/news/press/">press </a> </li>
                       </ul>
                     </div>
                 </div>
@@ -98,8 +98,8 @@ $('#mobile-menu-open').click(function() {
                 <div class="mega_support" style="background:#ccc"> 
                     <div class="container">
                       <ul>
-                        <li><a href="#">faq </a> </li>
-                        <li><a href="#">vedio gallery</a> </li>
+                        <li><a href="http://watteam-staging.bestdevsite.com/faq/">faq </a> </li>
+                        <li><a href="http://watteam-staging.bestdevsite.com/video-gallery/">vedio gallery</a> </li>
                         
                       </ul>
                     </div>
@@ -108,7 +108,7 @@ $('#mobile-menu-open').click(function() {
 
 
           </li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="http://watteam-staging.bestdevsite.com/contact/">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -154,7 +154,7 @@ $('#mobile-menu-open').click(function() {
   
 
   </div>
-  
+
   <!-- <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid container">
     <div class="navbar-header">
