--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,7 +1,7 @@
 <script>
 //window.location.href = '/products/pbprometer1';
 </script>
-<section>
+<section class="slider_home1">
 <div id="carousel-example" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
@@ -62,7 +62,7 @@
 </div>
  </section>
 
-<section class="slider_home1">
+<section class="slider_home2">
   <div class="container">
   <div class="row1">
     <div class="slider_container">
@@ -109,7 +109,7 @@
   </div>
 </div>
 </section>
-<section>
+<section class="new_arrivals">
   <div class="container">
     <div class="row">
       <div class=" col-xs-12 col-md-12 col-sm-12">
@@ -211,8 +211,7 @@
                  </li>
                 <li  class="bx-clone">
                 <%= image_tag "video-img5.png" %>
-                 </li>
-                
+                 </li>                
                 
                
               </ul>
@@ -220,7 +219,7 @@
             
          
         </div>
-        <h2 class="text-center text-heading-2">view gallery ></h2>
+        <h2 class="text-center text-heading-2"><a href="http://watteam-staging.bestdevsite.com/news/gallery/"> view gallery > </a>     </h2>
         <div class="top-to-bottom"></div>
         
       </div>
