--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -2,6 +2,7 @@
 //window.location.href = "/products/pbprometer1";
 //$('body').css('display','none');
 </script>
+<h2 class="shop_header">SHOP</h2>
 <% if params[:keywords] %>
 
   <div data-hook="search_results">
