--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,9 +1,11 @@
 
+<!--
 <div class="top_banner_1">
  <%= image_tag("benifits_banner.jpg", :alt => "slider1_img", :class =>"topbanner") %>
 </div> 
+-->
  <div class="container">
-
+    <h2 class="shop_header">SHOP</h2>
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
     <% @body_id = 'product-details' %>
 
@@ -71,9 +73,24 @@ $(document).ready(function(){
     $('.fancybox-type-inline').css('z-index','10000');
   });
 
+
+  $(document).ready(function(){
+	  $('#thumbnails ul').bxSlider({
+	    slideWidth: 200,
+	    auto: true,
+	    minSlides: 5,
+	    maxSlides: 10,
+	    mode: 'vertical',
+	    moveSlides: 1,
+	    pager: false,
+	   
+    	    slideMargin: 10
+  });
+});
+
 });
 </script>
-<div class="shipping_info_2015">
+<div class="shipping_info_2015 clearfix">
 <strong>Shipping will be available in March 2016 (Currently available in the US only)</strong>
 </div>
 <ul class="tabs">
@@ -84,6 +101,7 @@ $(document).ready(function(){
 </ul>
 <div class="tab_data">
 <div id="tab-1" class="tab-content current-tab">
+
 <p><img src="<%= asset_path ('mid_banner.jpg') %>" alt="watteam banner" width="100%" /></p>
 <p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks<sup>1</sup> deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with ANT+ head units, as well as with Bluetooth Smart enabled smartphones. <br />
 At last, a professional-grade power meter that anyone can afford!<br />
