--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -2,6 +2,10 @@
 
 <div data-hook="cart_container " class="">
   <h1><%= Spree.t(:shopping_cart) %></h1>
+  
+  
+  
+  <span class="shop_head"> Shopping Bag</span>
 
   <% if @order.line_items.empty? %>
 
