--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -30,7 +30,7 @@
 
      <div class="dollar">
             
-            <span class="only">only</span>
+            <!-- <span class="only">only</span> -->
             <span class="price selling" itemprop="price">
               <%= display_price(@product) %>
             </span>
@@ -52,7 +52,7 @@
 
 
       </div>
-      <p class="crank_description"><strong>Please choose your crank manufacturer and model below to proceed</strong></p>
+      <p class="crank_description"><span>Please choose your crank manufacturer and model below to proceed</span></p>
   <label>Crank Manufacturer:</label>
       <select name="crank_manufacturer" id="crank_manufacturer">
         <option value="">Please select</option>
