--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -64,7 +64,7 @@ $(document).ready(function(){
     <div class="container">
       <div class="menu_nev">
         <ul class="menu_ul">
-          <li><a href="/products">store</a></li>
+          <li><a href="http://watteam-staging.herokuapp.com/products/powerbeat-pro-level-power-meter-spring-2016">store</a></li>
           <li class="power_beat"><a href="#">About Powerbeat<i class="fa fa-angle-down"></i></a>
             <div class="bet_sub_menu">
             <div class="mega_abt" style="background:#ccc"> 
