--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -178,7 +178,7 @@
       <div class="col-xs-12 col-md-12 col-sm-12 ">
         <h2 class="text-center text-heading">#watteampowerbeat on INSTAGRAM</h2>
         <p class="lead">Follows us to  find oout the latest news and from our powerebeat team</p>
-        <div class="logo-slider">
+        <!--< div class="logo-slider">
          <ul class="slider2 logo-slide" style="width: 1115%; position: relative; transition-duration: 0.5s; transform: translate3d(-2380px, 0px, 0px);">
                 <li class="bx-clone">               
                 <%= image_tag "video-img1.png" %>
@@ -214,11 +214,13 @@
                  </li>                
                 
                
-              </ul>
-          
-            
-         
-        </div>
+              </ul>  
+        </div> -->
+
+      
+
+<script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/b4d52687a03758b999e6e5eb95c83dac.html" id="instansive_b4d52687a0" name="instansive_b4d52687a0"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+
         <h2 class="text-center text-heading-2"><a href="http://watteam-staging.bestdevsite.com/news/gallery/"> view gallery > </a>     </h2>
         <div class="top-to-bottom"></div>
         
