--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -220,7 +220,7 @@
       
 
 <!-- SnapWidget -->
-<iframe src="http://snapwidget.com/sc/?u=d2F0dGVhbXBvd2VyYmVhdHxpbnwxNTB8M3wzfHxub3w1fGZhZGVJbnx8eWVzfG5v&ve=040216" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:1024px; height:150px"></iframe>
+<iframe src="https://snapwidget.com/sc/?u=d2F0dGVhbXBvd2VyYmVhdHxpbnwxNTB8M3wzfHxub3w1fGZhZGVJbnx8eWVzfG5v&ve=040216" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:1024px; height:150px"></iframe>
 
         <h2 class="text-center text-heading-2"><a href="http://watteam-staging.bestdevsite.com/news/gallery/"> view gallery > </a>     </h2>
         <div class="top-to-bottom"></div>
