--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -37,7 +37,7 @@
     </div>
 
     <div class="columns five omega" data-hook="product_right_part">
-      <div class="row" data-hook="product_right_part_wrap">
+      <div class="row1" data-hook="product_right_part_wrap">
  <h3 class="product-title1" itemprop="name"><%= @product.name %></h3>
       
 
@@ -78,13 +78,12 @@ $(document).ready(function(){
 	  $('#thumbnails ul').bxSlider({
 	    slideWidth: 200,
 	    auto: true,
-	    minSlides: 5,
+	    minSlides: 7,
 	    maxSlides: 10,
 	    mode: 'vertical',
 	    moveSlides: 1,
-	    pager: false,
-	   
-    	    slideMargin: 10
+	    pager: false,	   
+    	slideMargin: 0
   });
 });
 
