--- a/app/views/spree/home/index.html (copy).erb
+++ b/app/views/spree/home/index.html (copy).erb
@@ -109,7 +109,67 @@
   </div>
 </div>
 </section>
-
+<section class="new_arrivals">
+  <div class="container">
+    <div class="row">
+      <div class=" col-xs-12 col-md-12 col-sm-12">
+        <h1 class="text-center title-Sellers">NEW ARRIVALS</h1>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-4.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+                
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center"> Product Nam</h3>
+            <span>$499.00</span> </div>
+        </div>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center">Product with Longer Name</h3>
+            <span>$499.00</span> </div>
+        </div>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center">Product with Longer Name that needs second line</h3>
+            <span>$499.00</span> </div>
+        </div>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center">Product Name</h3>
+            <span>$499.00</span> </div>
+        </div>
+         <div class="clearfix"></div>
+      
+      </div>
+    </div>
+  </div>
+</div>
+</section>
 
 
 <section class="our-team-v-2 ">
