--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -2,17 +2,60 @@
  <div class="container">
     <div class=" col-xs-12 col-md-12 col-sm-12">
     <div class="footer-wrper">
-    <div class="col-md-6 col-sm-6">
+    <div class="col-md-6">
     
-   <form class="form-inline" role="form">
-    <div class="form-group">
-      <label class="footer-title" for="email">NEWSLETTER SIGN-UP </label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email">
+  
+ <div id="mc_embed_signup">
+<div class="">
+<form action="//watteam.us10.list-manage.com/subscribe/post?u=a111cc0531d37f010c883cb18&amp;id=67cb1e31c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+
+    <div id="mc_embed_signup_scroll">
+
+  
+
+
+
+<div class="mc-field-group form-group">
+
+  <label for="email" class="footer-title">NEWSLETTER SIGN-UP </label>
+  <input type="email" value="" name="EMAIL" class="required email form-control mc-email-border" id="email mce-EMAIL" placeholder="Enter email">
+   <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+   
+   <p class="sf_required_fields_msg" id="requiredfieldsmsg"></p>
+</div>
+
+  <div id="mce-responses">
+
+    <div class="response" id="mce-error-response" style="display:none"></div>
+
+    <div class="response" id="mce-success-response" style="display:none"></div>
+
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_a111cc0531d37f010c883cb18_67cb1e31c9" tabindex="-1" value=""></div>
+
+   
+
+    </div>
+
+</form>
+
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
+
+
+
+
+
+
+
+
     </div>
     
     
     
-  </form>
+  
     </div>
     <div class="col-sm-12 col-md-6">
       
