--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -42,15 +42,17 @@ $(document).ready(function(){
     <div class="row">
       <div class="header_left"> 
         <!-- logo -->
-        <div class="logo"> <a href="index.html"><%= link_to image_tag("logo.png", :alt => "user"), spree.account_path %></a> </div>
+        <div class="logo"> <a href="index.html"><%= link_to image_tag("logo.png", :alt => "user"), '/' %></a> </div>
       </div>
       <div class="header_middle">
-        <div class="site-nub"> Order online or call 1.800.000.0000 </div>
+        <!--<div class="site-nub"> Order online or call 1.800.000.0000 </div>-->
       </div>
       <div class="header_right">
         <div class="top-manu">
           <ul>
-            <li><a href="/cart">cart</a></li>
+            <li id=""><a href="/cart">cart (<%= current_order.nil? ? '0' : current_order.item_count %>)
+             
+           </a></li>
             <li><a href="#">wishlist</a></li>
             <li><a href="/account">account</a></li>
           </ul>
