--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -69,7 +69,7 @@ $(document).ready(function(){
           <li><a href="http://watteam-staging.herokuapp.com/products/powerbeat-pro-level-power-meter-spring-2016">store</a></li>
           <li class="power_beat"><a href="#">About Powerbeat<i class="fa fa-angle-down"></i></a>
             <div class="bet_sub_menu">
-            <div class="mega_abt" style="background:#ccc"> 
+            <div class="mega_abt" style="background:#dddddf"> 
                 <div class="container">
                   <div class="store_left">
                     <div class="go_to_store">
