--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -42,7 +42,7 @@ $(document).ready(function(){
     <div class="row">
       <div class="header_left"> 
         <!-- logo -->
-        <div class="logo"> <a href="index.html"><%= link_to image_tag("logo.png", :alt => "user"), '/' %></a> </div>
+        <div class="logo"> <a href="index.html"><%= link_to image_tag("logo.png", :alt => "user"), 'http://watteam-staging.bestdevsite.com/' %></a> </div>
       </div>
       <div class="header_middle">
         <!--<div class="site-nub"> Order online or call 1.800.000.0000 </div>-->
