--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -136,7 +136,7 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
     <td>Power metrics:</td><td>Both right and left leg data</td>
   </tr>
   <tr>
-    <td>Weight:</td><td>24 grams for each crank</td>
+    <td>Weight:</td><td>18.9g for each crank</td>
   </tr>
   <tr>
     <td>Communication:</td><td>ANT+ and BLUETOOTH SMART</td>
@@ -177,7 +177,7 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
 1 User's Manual<br />
 <br />
 Box size:   27*22.5*7 cm<br />
-Box weight: 700 grams (24.7 ounces)<br />
+Box weight: 850 grams (29.9 ounces)<br />
 </p>
 </div>
 </div>
