--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -53,7 +53,7 @@ $(document).ready(function(){
             <li id=""><a href="/cart">cart (<%= current_order.nil? ? '0' : current_order.item_count %>)
              
            </a></li>
-            <li><a href="#">wishlist</a></li>
+           <!-- <li><a href="#">wishlist</a></li>-->
             <li><a href="/account">account</a></li>
           </ul>
         </div>
