--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -119,7 +119,7 @@ $(document).ready(function(){
                     <div class="container">
                       <ul>
                         <li><a href="http://watteam-staging.bestdevsite.com/faq/">faq </a> </li>
-                        <li><a href="http://watteam-staging.bestdevsite.com/video-gallery/">vedio gallery</a> </li>
+                        <li><a href="http://watteam-staging.bestdevsite.com/video-gallery/">Video Gallery</a> </li>
                         
                       </ul>
                     </div>
