--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -11,7 +11,7 @@
 
     <div data-hook="empty_cart">
       <p><%= Spree.t(:your_cart_is_empty) %></p>
-      <p><%= link_to Spree.t(:continue_shopping), '/products/pbprometer1', :class => 'button continue' %></p>
+      <p><%= link_to Spree.t(:continue_shopping), '/products/powerbeat-pro-level-power-meter-spring-2016', :class => 'button continue' %></p>
     </div>
 
   <% else %>
@@ -43,7 +43,7 @@
         <p id="clear_cart_link" data-hook>
         <%= submit_tag Spree.t(:empty_cart), :class => 'button gray' %>
         <%= Spree.t(:or) %>
-        <%= link_to Spree.t(:continue_shopping), '/products/pbprometer1', :class => 'continue button gray' %>
+        <%= link_to Spree.t(:continue_shopping), '/products/powerbeat-pro-level-power-meter-spring-2016', :class => 'continue button gray' %>
         </p>
       <% end %>
     </div>
