--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -32,31 +32,31 @@ end
     <!--The mobile navigation Markup hidden via css-->
     <nav id="main-nav">
         <ul>
-            <h3 class="mobile_menu_title"><a href="http://watteam-staging.bestdevsite.com">Watteam</a></h3>
+            <h3 class="mobile_menu_title"><a href="http://watteam.com">Watteam</a></h3>
             <li><a href="#">STORE</a></li>
       <li class="button menu-mobile parent" id="second"><a href="#">ABOUT POWERBEAT</a>
         <ul class="sub_menu" id="hideMe">
-          <li class="child"><a href="#">Visit Store</a></li>
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/benefits/">Benefits</a></li>
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/technology/">Technology</a></li>
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/news/gallery/">Gallery</a></li>
+          <li class="child"><a href="http://shop.watteam.com/products/powerbeat-pro-level-power-meter-spring-2016">Visit Store</a></li>
+          <li class="child"><a href="http://watteam.com/benefits/">Benefits</a></li>
+          <li class="child"><a href="http://watteam.com/technology/">Technology</a></li>
+          <li class="child"><a href="http://watteam.com/news/gallery/">Gallery</a></li>
         </ul>
       </li>
       <li class="button menu-mobile parent" id="second1"><a href="#">COMPANY</a>
         <ul class="sub_menu" id="hideMe1">
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/about/">About Us</a></li>
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/partners/">Partners</a></li>
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/news/press/">PRESS</a></li>
+          <li class="child"><a href="http://watteam.com/about/">About Us</a></li>
+          <li class="child"><a href="http://watteam.com/partners/">Partners</a></li>
+          <li class="child"><a href="http://watteam.com/news/press/">PRESS</a></li>
           
         </ul>
       </li>
       <li class="button menu-mobile parent" id="second2"><a href="#">SUPPORT</a>
         <ul class="sub_menu" id="hideMe2">
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/faq/">FAQ</a></li>
-          <li class="child"><a href="http://watteam-staging.bestdevsite.com/video-gallery/">Video Gallery</a></li>
+          <li class="child"><a href="http://watteam.com/faq/">FAQ</a></li>
+          <li class="child"><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
         </ul>
       </li>
-      <li><a href="watteam-staging.bestdevsite.com/contact/">CONTACT US</a></li>
+      <li><a href="watteam.com/contact/">CONTACT US</a></li>
             
         </ul>
     </nav>
