--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -74,7 +74,7 @@ $(document).ready(function(){
                   <div class="store_left">
                     <div class="go_to_store">
                     <%= image_tag("item-3.png", :alt => "slider1_img") %>
-                    <span>visit store</span>
+                    <span><a href="http://watteam.com/products/powerbeat-pro-level-power-meter-spring-2016">visit store</a></span>
                   </div>
                   </div>
                   <div class="abt_right">
